# nanograd_web

./: Cargo.toml  README.md
backendRust/pkg/: nanograd_web.d.ts  nanograd_web.js  nanograd_web_bg.wasm  nanograd_web_bg.wasm.d.ts  package.json
backendRust/src/: lib.rs
data/: README.md  generate.py  visualize.py
data/saved/: circle.json  gaussian.json  xor.json
frontend/: next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/chart/: types.ts  utils.ts
frontend/components/: CardEpoch.tsx  CardLoss.tsx  CardPredictions.tsx  CardStats.tsx  ChartHeatmap.tsx  ChartLine.tsx  ConfusionMatrix.tsx  DrawChart.tsx  Fathom.tsx  GradientDescent.tsx  GreetButton.tsx  InputNumber.tsx  SampleButton.tsx  SelectDataset.tsx  SelectLayers.tsx  Slider.tsx
frontend/components/navigation/: Footer.tsx  Navbar.tsx
frontend/constants/: network.ts  style.ts
frontend/context/: WASM.tsx
frontend/data/: index.ts  types.ts
frontend/data/saved/: circle.json  gaussian.json  spiral.json  xor.json
frontend/network/: types.ts  utils.ts
frontend/workers/: gradientDescent.ts  types.ts
src/: lib.rs
